--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="menu">
 <ul id="headerlist"> 
 <li><a href="participantes.html"> Contact Me</a></li>
-<li><a href="voluntarios.html"> All Categories</a></li>
+<li><a href="voluntaries.html"> All Categories</a></li>
 <li><a href="highlights.html"> Highlights</a></li>
 </ul>
 </div>
