Este es otro commit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-voy a escribir otra cosa 
-=======
 <!DOCTYPE HTML>
 
 <html>
@@ -16,7 +13,9 @@ voy a escribir otra cosa
 	<div class="menu">
 <ul id="headerlist"> 
 <li><a href="participantes.html"> Contact Me</a></li>
-<li><a href="voluntaries.html"> All Categories</a></li>
+
+esta lineas es nueva
+
 <li><a href="highlights.html"> Highlights</a></li>
 </ul>
 </div>
@@ -130,4 +129,3 @@ voy a escribir otra cosa
 </body>
 
 </html>
->>>>>>> 4de45f192506a81fe5234fb8ee1efe8cf6445de4
